# design-special-topic-5

./: README.md
modelling/: Makefile  README.md  create-pdfs.sh
modelling/beam-splitter-mount/: 2d.scad  beam-splitter-mount.scad  config.scad  stem.scad  target.scad
modelling/bench-mount/: Makefile  config.scad
modelling/flue/: Makefile  assembled-2d.scad  assembled.scad  assembly.scad  bench-mount-2d.scad  bench-mount-assembled.scad  bench-mount-connection.scad  bench-mount-horizontal.scad  bench-mount-plug.scad  bench-mount-tube-mount.scad  bench-mount-vertical.scad  bench-mount.scad  blower-mount.scad  bolt-test.scad  clip-test.scad  clip.scad  config.scad  flue-lower-2d.scad  flue-lower.scad  flue-middle-2d.scad  flue-middle.scad  flue-upper-2d.scad  flue-upper.scad  hexagon.scad  lip.scad  slide-mount-lower.scad  slide.scad
modelling/laser-mount/: bolt_mount.scad  config.scad  mount.scad  (+1 more)
risk-assessment/: main.typ
software/: CMakeLists.txt  Cargo.toml  README.md  bindings.h  build.rs
software/capture/: .gitignore  README.md  capture.sh  compute-ffts.py  settings
software/capture/2026-05-15__16-46-50/: capture.sh
software/capture/bak/: capture.sh
software/include/: graph.h  pico.h  ring-buffer.h
software/pico-c/: Makefile
software/pico-c/src/: graph.c  pico.c
software/pico-rust/: .gitignore  Cargo.toml  README.md  bindings.h  build.rs  laser-control.psuedo
software/pico-rust/src/: data_logger.rs  data_source.rs  main.rs  pico.rs  pico_lib.c  pico_lib.h  signal_processing.rs
software/src/: graph.c  graph.rs  main.c  main.rs  pico.c  pico.rs  pico_lib.c  pico_lib.h  ring-buffer.c  signal_processing.rs
spherical-mirror-sim/: index.html  script.js
(+19 files in other folders)
